fixed css shift

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -84,7 +84,7 @@ li {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 30px;
-    max-width: 2000px;
+    max-width: 100%;
     flex: 1; /* Make sure the container grows */
 }
 
